# cxxlens

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .yamllint.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  LICENSE  NOTICE  README.md  SECURITY.md  cxxred_upper_layer_design_ja.md  llvm_clang_wrapper_design_ja.md
examples/m2-flagship/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/adapter/clang22/: df_0200_claim_batch_corpus_test.cpp  materialization_claims_test.cpp  materialization_identity_test.cpp  materialization_io_test.cpp  materialization_json_test.cpp  materialization_occurrence_test.cpp  materialization_report_schema_test.py  materialization_report_test.cpp  materialization_request_driver.cpp  materialization_request_identity_test.cpp  materialization_request_stream_test.cpp  materialization_request_test.py  materialization_request_v2_1_test.cpp  materialization_rooted_vfs_test.cpp  materialization_seal_test.cpp  materialization_store_test.cpp  materialization_task_spool_test.cpp  observation_v2_test.cpp  preprocessor_extractor_test.cpp  provider_normalizer_test.cpp  provider_worker_protocol_test.cpp  semantic_extractor_test.cpp  test_preprocessor_process.py  test_semantic_process.py  unicode_nfc_test.cpp
tests/agent/ownership/: test_ownership.py
tests/agent/readiness/: test_readiness_audit.py
tests/agent/runner/: test_runner.py
tests/agent/task_packet/: test_task_packet.py
tests/canary/: expect_failure.py  sanitizer_canary.cpp
tests/config/: test_configuration_process.py
tests/contract_spikes/: high_risk_contract_spike.py  high_risk_validation_evidence.json  test_high_risk_contract_validation.py
tests/evidence/: test_evidence_process.py
tests/facts/: test_fact_schemas.py
tests/finding/: test_finding_process.py
tests/fixtures/: frontend_worker_fixture.cpp  provider_process_fixture.cpp  tsan_race_fixture.cpp
tests/frontend/: test_frontend_schema.py
tests/golden/clang22/: preprocessor_v1.txt  semantic_v1.txt
tests/golden/config/: resolved_v1.sha256
tests/golden/evidence_coverage/: canonical_v1.txt
tests/golden/facts/: reducer_v1.json
tests/golden/finding/: canonical_v1.txt
tests/golden/identity/: canonical_v1.txt
tests/golden/json/: m0_documents_v1.sha256
tests/golden/query/: canonical_v1.sha256
tests/golden/scheduler/: canonical_v1.json
tests/golden/search/: canonical_v1.sha256
tests/golden/selectors/: m2_v1.jsonl
tests/golden/source/: direct.json  nested_macro.json
tests/golden/store/: snapshot_binary_v1.txt
tests/golden/testing/: fixture_v1.sha256
tests/identity/: test_identity_process.py
tests/install/: consumer_sanitizers.cmake  run_install_test.cmake.in
tests/install/clang22_sdk_consumer/: CMakeLists.txt  main.cpp
tests/install/consumer/: CMakeLists.txt  main.cpp
tests/install/examples_consumer/: CMakeLists.txt
tests/install/real_project_consumer/: CMakeLists.txt  main.cpp  model.cpp  model.hpp
tests/install/sdk_consumer/: CMakeLists.txt  main.cpp
tests/integration/: m1_conformance_test.cpp  m2_search_conformance_test.cpp  r2_vertical_slice_test.cpp
tests/link/: clang22_link_closure_test.cpp  provider_sdk_link_closure.py
tests/public_headers/: configuration_header_test.cpp  core_header_test.cpp  cxxlens_header_test.cpp  evidence_header_test.cpp  explain_header_test.cpp  facts_header_test.cpp  failure_header_test.cpp  finding_header_test.cpp  identity_header_test.cpp  interop_clang_header_test.cpp  provider_clang22_header_test.cpp  schema_header_test.cpp  sdk_header_test.cpp  search_header_test.cpp  select_header_test.cpp  source_header_test.cpp  testing_header_test.cpp  workspace_header_test.cpp
tests/qualification/: sqlite_store_v3_qualification_case_runner.cpp
tests/quality/: test_api_contract.py  test_api_test_coverage.py  test_documentation_consistency.py  test_global_contract_conventions.py  test_ng_api_development_readiness.py  test_ng_authority.py  test_ng_ci_supply_chain.py  test_ng_clang22_materialization.py  test_ng_design_feedback.py  test_ng_foundation_completion.py  test_ng_g5_qualification.py  test_ng_migration_completion.py  test_ng_production_scope_closure.py  test_ng_provider_protocol.py  test_ng_provider_runtime.py  test_ng_public_callable_inventory.py  test_ng_query_contract.py  test_ng_relation_contract.py  test_ng_release_contract.py  test_ng_release_qualification.py  test_ng_sdk_contract.py  test_ng_security_contract.py  test_ng_semantic_guarantee.py  test_ng_snapshot_store_contract.py  test_ng_sqlite_store_contract.py  test_ng_sqlite_store_v3_qualification.py  test_package_contract_candidates.py  test_produce_ng_sqlite_store_v3_qualification.py  test_public_api_contract_freeze.py  test_quality_ownership.py  test_sanitizer_coverage.py  test_tsan_gate.py
tests/query/: test_query_process.py
tests/scheduler/: test_scheduler_process.py
tests/schema/: test_m0_serialization.py  test_source_schema.py
tests/search/: test_search_process.py
tests/select/: test_selector_process.py
tests/support/: discover_fixtures.py  sqlite_store_fixture.hpp  sqlite_store_v3_scenario.cpp  sqlite_store_v3_scenario.hpp
tests/testing/: test_testing_fixture_process.py
tests/tsan/: suppressions.yaml  tsan.supp  verify_tsan_detection.py
tests/unit/: version_test.cpp
tests/unit/config/: configuration_process_test.cpp  configuration_test.cpp
tests/unit/core/: canonical_json_test.cpp  evidence_coverage_test.cpp  failure_contract_test.cpp  finding_contract_test.cpp  m0_serialization_test.cpp  schema_registry_test.cpp
tests/unit/facts/: fact_contract_test.cpp
tests/unit/identity/: canonical_identity_test.cpp
tests/unit/llvm/: frontend_job_test.cpp
tests/unit/query/: query_engine_test.cpp  query_fixture.hpp  query_process.cpp
tests/unit/runtime/: runtime_ports_test.cpp
tests/unit/sdk/: check_case_registration.py  g5_runtime_test.cpp  provider_runtime_test.cpp  query_runtime_test.cpp  sdk_test.cpp  store_test.cpp  (+12 more)
tests/workspace/: test_provisioning_contract.py  test_workspace_process.py
(+840 files in other folders)
